--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -142,57 +142,6 @@ body::-webkit-scrollbar-thumb {
   transform: translate(0px, 0px);
 }
 
-.css-1ss3utg[aria-selected=true]{
-  width: 25% !important;
-  height: 40px !important;
-  border-radius: 20px !important;
-  background-color: rgb(247, 249, 252) !important;
-  align-items: center;
-  justify-content: center;
-}
-
-.css-a5mhaz{
-  text-align: center;
-  width: 100%;
-  padding: 30px !important;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.css-8atqhb{
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  background-color: rgb(23, 21, 49);
-  color: white;
-  border-radius: 24px;
-}
-
-.css-1uw5bnh{
-  justify-content: center !important;
-  background-color: rgb(23, 21, 49);
-  border-radius: 24px;
-  padding: 4px;
-  gap: 5px;
-}
-
-.css-1ss3utg{
-  width: 25% !important;
-  height: 40px !important;
-  font-size: 12px !important;
-  color: white !important;
-}
-
-.css-1ss3utg[aria-selected=true], .css-1ss3utg[data-selected]{
-  color: #0E0B3D !important;
-  font-size: 12px !important;
-}
-
-.chakra-tabs {
-  margin-top: 1.5rem;
-}
-
 @font-face {
   font-family: 'Faktum-Light';
   src: url('/fonts/Faktum-Light.otf');
@@ -201,19 +150,6 @@ body::-webkit-scrollbar-thumb {
 @font-face {
   font-family: 'Faktum-SemiBold';
   src: url('/fonts/Faktum-SemiBold.otf');
-}
-
-p,
-span,
-a,
-.description-main,
-body,
-div,
-button{
-  font-family: 'Inter', sans-serif !important;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: -0.01em;
 }
 
 h1,
@@ -227,6 +163,24 @@ h1 div{
   letter-spacing: -0.04em;
   line-height: 56px;
 }
+
+p,
+span,
+a,
+.description-main,
+body,
+div,
+button{
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: -0.01em;
+}
+
+.group a{
+  font-family: 'Faktum-SemiBold', sans-serif !important;
+}
+
 
 header a{
   font-size: 14px;
